--- a/public/Style.css
+++ b/public/Style.css
@@ -2,7 +2,7 @@ body {
       font-family: Arial, sans-serif;
       background: #f4f4f4;
       padding: 20px;
-      background-image: url("https://images.pexels.com/videos/15439741/3d-9-16-cgi-clip-15439741.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+      background-color: #b3a2a2;
     }
 
     #head{
